--- a/BankingSystem.vcxproj
+++ b/BankingSystem.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountTypes.h" />
     <ClInclude Include="bank.h" />
+    <ClInclude Include="Login.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
