--- a/BankingSystem.vcxproj.filters
+++ b/BankingSystem.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Account.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Login.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
